# SpreadsDetectorSchemas

./: .gitignore  LICENSE  README.md  pyproject.toml
quotes/: __init__.py  factories.py  schema.py  utils.py
spreads/: __init__.py  factories.py  schema.py  utils.py
tests/: test_quotes.py  test_spreads.py
